Improve project structure

--- a/index.html
+++ b/index.html
@@ -1,31 +1,35 @@
 <html>
-	<head>
-		<title>um titulo legal</title>
-	</head>
-	<body>
-		<span>Hello world</span>
-		<button>clique aqui</button>
-		<div>loren ipisulom </div>
-		<p>loren ipisulom </p>
-		<a href="http://www.google.com">oi</a>
-		<a href="signUp.html">outra pagina</a>
-		<ul>
-			<li>Morango</li>
-			<li>Pêra</li>
-			<li>Maçã</li>		
-		</ul>	
-		<input type="text">
-		<div>
-		    <label for="masc">Masculino</label>
-			<input type="radio" name="gender" id="masc"><br>
-			 <label for="fem">Feminino</label>
-			<input type="radio" name="gender" id="fem">
-			<h1>titulo maior</h1>
-			<h2>segundo titulo maior</h2>
-			<h3>terceiro titulo maior</h3>
-			<h4>quarto titulo maior</h4>
-			<h5>quinto titulo maior</h5>
-			<h6>esse é o menor</h6>
-		</div>
-	</body>
+    <head>
+        <title>Blog da Ju</title>
+        <link rel="stylesheet" type="text/css" href="src/css/index.css">
+    </head>
+    <body>
+        <div>
+            <div class="sidebar">
+                <!--GENIAL-->
+                <img  class="profile-picture" src="src/img/ju2.jpg">
+                <ul class="link-list">
+                    <li><a href="#">Sobre mim</a></li>
+                    <li><a href="#"> Curiosidades</a></li>
+                    <li><a href="#"> Fotos</a></li>
+                    <li><a href="#"> teste</a></li>
+                </ul>           
+            </div>
+
+            <div class="head-main">
+                <h2>
+                    Lorem ipsum
+                </h2>
+                <small style="display: block">
+                    Autor: Ju
+                </small>
+                <img src="src/img/post.jpg" class="imagem-post">        
+               <div class="conteudo-post">
+                    <p>
+                        <span class="primeira-letra">L</span>orem ipsum dolor sit amet, consectetur adipiscing elit. Sed a mi a ligula facilisis lacinia quis efficitur justo. Praesent metus lectus, tincidunt id faucibus et, vulputate sit amet sem. Etiam id enim risus. Fusce egestas lorem massa, id porttitor nisl commodo id. Aenean et aliquet odio. Donec vulputate diam vel est rutrum, eu malesuada eros laoreet. Quisque tincidunt iaculis lectus, ut efficitur elit congue in.
+                    </p>    
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
