--- a/landing.html
+++ b/landing.html
@@ -3,11 +3,12 @@
         <title>  </title>
         <style>
         	.start { 
-        		height:693px ;
+        		height:480px ;
         		background-image: url("src/img/start.jpeg");
         		padding-top: 160px;
         		padding-left: 120px;
         		background-repeat: no-repeat;
+
         	}
 
         	.start .title1 {
@@ -82,7 +83,101 @@
             .btn:hover{
                 background-color: #b7170b;
                 color: white;
+            }
+
+            .hosting-option{
+                height: 190px;
+                width: 370px;
+                margin-left: 36.6px;
+                display: inline-block;
+                background-color: #feea3a;
+                border-top-right-radius: 3px;
+                border-top-left-radius: 3px;
+                vertical-align: top;
+                margin-top: 60px;
+
+            }
+            .hosting-option .text-medium{
+                color: #333;
+                font-size: 34px;
+                padding-left: 34px;
+                padding-bottom: 10px;
+            }
+
+            .hosting-option .text-small{
+                color: #009587;
+                font-size: 25px;
+                padding-left: 34px;
+                margin-bottom: 0px;
+            }
                 
+            .hosting-option .text-big{
+                color:#009587;
+                font-size: 65px;
+                padding-left: 34px;
+                display: inline-block;
+            }
+            .hosting-option .month{
+                color: #009587;
+                font-size: 22px;
+                padding-left: 243px;
+                margin-top: -37px;
+            }
+
+            .feature{
+                height: 339px;
+                width: 370px;
+                background-color: #FFF8DC;
+            }
+
+            .feature .list li{
+                list-style: none;
+                color: #888;
+                font-size: 14px;
+                margin-top: 0px; 
+                margin-bottom: 12px               
+            }
+
+            .btn-start{
+                background-color: #009587;
+                border-radius: 3px;
+                text-align: center;
+                display: inline-block;
+                height: 57px;
+                width: 310px;
+                color: white;
+                font-weight: bold;  
+                margin-left: 30px;
+                margin-top: 10px;
+                text-decoration: none;
+                transition: 5s;
+                line-height:54px;
+                font-size: 20px;
+            }
+
+            .second{
+                height: 1046px;
+                width:  1270px;
+                background-color: #D3D3D3;
+                display: inline-block;
+            }
+
+            .img{
+                border-radius: 150px;
+                width: 300px;
+                margin-top: 420px;
+                margin-left: 100px; 
+                display: inline-block;
+            }
+
+            .text{
+                width: 600px;
+                text-align: justify;
+            }
+  
+            .paragraph1{
+                display: inline-block;
+                vertical-align: top;
             }
         </style>
     </head>
@@ -113,5 +208,72 @@
 	    		<a href="#" class="btn">Get started now!</a>
 	    	</div>
     	</div>
+
+        <div class="second">
+            <div class="hosting-option">
+                <h1 class="text-medium">Reseller Hosting</h1>
+                <h2 class="text-small">Starting at</h2>
+                <p class="text-big">$ 19.96</p>
+                <h2 class="month">/mo*</h2>
+                <div class="feature">
+                    <ul class="list">
+                        <li>UNLIMITED Disk Space</li>
+                        <li>UNLIMITED Disk Space</li>
+                        <li>UNLIMITED Disk Space</li>
+                        <li>UNLIMITED Disk Space</li>
+                        <li>UNLIMITED Disk Space</li>
+                        <li>UNLIMITED Disk Space</li>
+                        <li>UNLIMITED Disk Space</li>
+                    </ul>
+                    <a href="#" class="btn-start">Get start now!</a>
+                </div>        
+            </div>
+
+            <div class="hosting-option">
+                <h1 class="text-medium">Reseller Hosting</h1>
+                <h2 class="text-small">Starting at</h2>
+                <p class="text-big">$ 19.96</p>
+                <h2 class="month">/mo*</h2>
+                <div class="feature">
+                    <ul class="list">
+                        <li>UNLIMITED Disk Space</li>
+                        <li>UNLIMITED Disk Space</li>
+                        <li>UNLIMITED Disk Space</li>
+                        <li>UNLIMITED Disk Space</li>
+                        <li>UNLIMITED Disk Space</li>
+                        <li>UNLIMITED Disk Space</li>
+                        <li>UNLIMITED Disk Space</li>
+                    </ul>
+                    <a href="#" class="btn-start">Get start now!</a>
+                </div>        
+            </div>
+
+            <div class="hosting-option">
+                <h1 class="text-medium">Reseller Hosting</h1>
+                <h2 class="text-small">Starting at</h2>
+                <p class="text-big">$ 19.96</p>
+                <h2 class="month">/mo*</h2>
+                <div class="feature">
+                    <ul class="list">
+                        <li>UNLIMITED Disk Space</li>
+                        <li>UNLIMITED Disk Space</li>
+                        <li>UNLIMITED Disk Space</li>
+                        <li>UNLIMITED Disk Space</li>
+                        <li>UNLIMITED Disk Space</li>
+                        <li>UNLIMITED Disk Space</li>
+                        <li>UNLIMITED Disk Space</li>
+                    </ul>
+                    <a href="#" class="btn-start">Get start now!</a>
+                </div>        
+            </div>
+            <div>
+                <img class="img" src="src/img/ju2.jpg">
+                <div paragraph1>
+                    <h1 class="title3"> We Are With You Every Step Of The Way!</h1>     
+                    <p class="text">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+                </div>
+            </div>
+        </div>
+        
     </body>
 </html>
