fixing formt of paragraph

--- a/landing.html
+++ b/landing.html
@@ -163,16 +163,24 @@
             }
 
             .img{
-                border-radius: 150px;
-                width: 300px;
+                border-radius: 180px;
+                width: 360px;
                 margin-top: 420px;
                 margin-left: 100px; 
                 display: inline-block;
+                margin-right: 80px;
             }
 
             .text{
                 width: 600px;
                 text-align: justify;
+                font-size: 18px;
+            }
+
+            .title3{
+                padding-top: 450px;
+                font-size: 22px;
+                
             }
   
             .paragraph1{
@@ -268,7 +276,7 @@
             </div>
             <div>
                 <img class="img" src="src/img/ju2.jpg">
-                <div paragraph1>
+                <div class="paragraph1">
                     <h1 class="title3"> We Are With You Every Step Of The Way!</h1>     
                     <p class="text">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
                 </div>
