Adding grid5 of landing

--- a/landing.html
+++ b/landing.html
@@ -320,7 +320,7 @@
 
             .fourth{
                 height: 452px;
-                width: 1286px;
+                width: 1270px;
                 background-color: #DCDCDC;
                 display: inline-block;
                 vertical-align: top;
@@ -389,6 +389,30 @@
                 margin-top: -114px;
                 margin-left: 460px;
                 display: inline-block;
+            }
+
+            .fiveth{
+                width: 1270px;
+                height: 517px;
+                background-color: #009587;
+            }
+
+            ..fiveth .person1{
+                width: 350px;
+                height: 370px;
+
+            }
+            .fiveth .person1 .img{
+                width: 167px;
+                height: 167px;
+                border-radius: 83.5px;
+                margin-top: 25px;
+                margin-left: 24px;
+            }
+
+            .fiveth .person1 h2{
+                margin-top: 0px;
+                margin-left: 0px;
             }
         </style>
     </head>
@@ -518,6 +542,13 @@
 
             <img class="img3" src="src/img/amoedo.jpg">
             <img class="img4" src="src/img/amoedo.jpg">
+        </div>
+
+        <div class="fiveth">
+            <div class="person1">
+                <img class="img" src="src/img/juliana.jpg">
+                <h2>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</h2>
+            </div>
         </div>
         
     </body>
