Update material of landing

--- a/landing.html
+++ b/landing.html
@@ -397,11 +397,11 @@
                 background-color: #009587;
             }
 
-            ..fiveth .person1{
+            .fiveth .person1{
                 width: 350px;
                 height: 370px;
-
             }
+    
             .fiveth .person1 .img{
                 width: 167px;
                 height: 167px;
